--- a/第一周学习笔记（杨卓潘）.md
+++ b/第一周学习笔记（杨卓潘）.md
@@ -1,1 +1,52 @@
-﻿﻿﻿﻿# 关于Java的异常和一点I/O流笔记 # 1.异常问题：  异常指程序运行过程中出现的非正常现象，例如用户输入错误、除数为零、需要处理的文件不存在、数组下标越界等。在Java的异常处理机制中，引进了很多用来描述和处理异常的类，称为异常类。异常类定义中包含了该类异常的信息和对异常进行处理的方法。所谓异常处理，就是指程序在出现问题时依然可以正确的执行完。##Java是采用面向对象的方式来处理异常的。处理过程：*1. **抛出异常**：在执行一个方法时，如果发生异常，则这个方法生成代表该异常的一个对象，停止当前执行路径，并把异常对象提交给JRE。2. **捕获异常**：JRE得到该异常后，寻找相应的代码来处理该异常。JRE在方法的调用栈中查找，从生成异常的方法开始回溯，直到找到相应的异常处理代码为止。##异常的处理方式有两种：使用“try/catch”捕获异常、使用“throws”声明异常```异常的处理方式之一：捕获异常异常的处理方式之二：声明异常(throws子句)```##Exception是程序本身能够处理的异常如：空指针异常(NullPointerException)、数组下标越界异常(ArrayIndexOutOfBoundsException)、类型转换异(ClassCastException)、算术异常(ArithmeticException)等。##Exception类是所有异常类的父类，其子类对应了各种各样可能出现的异常事件。 通常Java的异常可分为：1. RuntimeException 运行时异常2. CheckedException 已检查异常# 2.I/O流问题：数据源data source，提供数据的原始媒介。常见的数据源有：数据库、文件、其他程序、内存、网络连接、IO设备。1. . FileInputStream/FileOutputStream 节点流：以字节为单位直接操作“文件”。1. . FileReader/FileWriter 节点流：以字符为单位直接操作“文本文件”(注意：只能读写文本文件)。# # # # ## # # # ## # # # ## # # # ## 关于MAV思想的一些笔记 # # # # # # # # # # # # # # # # # # #      • Model在values目录下通过xml文件格式生成，也可以通过硬编码的方式直接Java代码生成。View和Model是通过桥梁Adapter来连接起来。    • View层：应用层中处理数据显示的部分，XML布局可以视为V层，显示Model层的数据结果。 View是软件应用传送给用户的一个反馈结果。它代表软件应用中的图形展示、声音播放、触觉反馈等职责。视图的根节点是应用程序的自身窗口。比如，视频播放器中可能包含当前播放的画面，这个画面就是一个视图。另一个视图组件可能是该视频的文字标题。再一个就是一些播放按键，比如：Stop、Start、Pause等按钮。    • Controller层：在Android中，Activity处理用户交互问题，因此可以认为Activity是控制器，Activity读取V视图层的数据（eg.读取当前EditText控件的数据），控制用户输入（eg.EditText控件数据的输入），并向Model发送数据请求（eg.发起网络请求等）。Controller在软件应用负责对外部事件的响应，包括：键盘敲击、屏幕触摸、电话呼入等。Controller实现了一个事件队列，每一个外部事件均在事件队列中被唯一标识。框架依次将事件从队列中移出并派发出去。  **总而言之**，MVC框架如下：View 是应用程序中负责生成用户界面的部分。也是在整个mvc架构中用户唯一可以看到的一层，接收用户的输入，显示处理结果。Controller 是根据用户的输入，控制用户界面数据显示及更新model对象状态的部分，控制器更重要的一种导航功能，想用用户出发的相关事件，交给Model处理。Model 应用程序的主体部分，所有的业务逻辑都应该写在该层。#今晚才弄出点文字笔记，我习惯性截图在word文档来看的，不习惯用markdown吧，今晚还要好好学习。
+﻿﻿﻿﻿# 关于Java的异常和一点I/O流笔记 
+
+
+# 1.异常问题：  异常指程序运行过程中出现的非正常现象，例如用户输入错误、除数为零、需要处理的文件不存在、数组下标越界等。
+在Java的异常处理机制中，引进了很多用来描述和处理异常的类，称为异常类。异常类定义中包含了该类异常的信息和对异常进行处理的方法。
+所谓异常处理，就是指程序在出现问题时依然可以正确的执行完。
+
+##Java是采用面向对象的方式来处理异常的。处理过程：*
+
+1. **抛出异常**：在执行一个方法时，如果发生异常，则这个方法生成代表该异常的一个对象，停止当前执行路径，并把异常对象提交给JRE。
+2. **捕获异常**：JRE得到该异常后，寻找相应的代码来处理该异常。JRE在方法的调用栈中查找，从生成异常的方法开始回溯，直到找到相应的异常处理代码为止。
+
+##异常的处理方式有两种：使用“try/catch”捕获异常、使用“throws”声明异常
+```
+异常的处理方式之一：捕获异常
+
+异常的处理方式之二：声明异常(throws子句)
+```
+##Exception是程序本身能够处理的异常
+如：空指针异常(NullPointerException)、数组下标越界异常(ArrayIndexOutOfBoundsException)、类型转换异(ClassCastException)、算术异常(ArithmeticException)等。
+
+
+##Exception类是所有异常类的父类，其子类对应了各种各样可能出现的异常事件。
+
+ 通常Java的异常可分为：
+1. RuntimeException 运行时异常
+2. CheckedException 已检查异常
+
+
+# 2.I/O流问题：数据源data source，提供数据的原始媒介。常见的数据源有：数据库、文件、其他程序、内存、网络连接、IO设备。
+
+1. . FileInputStream/FileOutputStream 节点流：以字节为单位直接操作“文件”。
+1. . FileReader/FileWriter 节点流：以字符为单位直接操作“文本文件”(注意：只能读写文本文件)。
+
+
+
+
+
+# 关于MAV思想的一些笔记  
+    • Model在values目录下通过xml文件格式生成，也可以通过硬编码的方式直接Java代码生成。View和Model是通过桥梁Adapter来连接起来。
+    • View层：应用层中处理数据显示的部分，XML布局可以视为V层，显示Model层的数据结果。 View是软件应用传送给用户的一个反馈结果。它代表软件应用中的图形展示、声音播放、触觉反馈等职责。视图的根节点是应用程序的自身窗口。比如，视频播放器中可能包含当前播放的画面，这个画面就是一个视图。另一个视图组件可能是该视频的文字标题。再一个就是一些播放按键，比如：Stop、Start、Pause等按钮。
+    • Controller层：在Android中，Activity处理用户交互问题，因此可以认为Activity是控制器，Activity读取V视图层的数据（eg.读取当前EditText控件的数据），控制用户输入（eg.EditText控件数据的输入），并向Model发送数据请求（eg.发起网络请求等）。Controller在软件应用负责对外部事件的响应，包括：键盘敲击、屏幕触摸、电话呼入等。Controller实现了一个事件队列，每一个外部事件均在事件队列中被唯一标识。框架依次将事件从队列中移出并派发出去。
+ 
+
+ 
+**总而言之**，MVC框架如下：
+View 是应用程序中负责生成用户界面的部分。也是在整个mvc架构中用户唯一可以看到的一层，接收用户的输入，显示处理结果。Controller 是根据用户的输入，控制用户界面数据显示及更新model对象状态的部分，控制器更重要的一种导航功能，想用用户出发的相关事件，交给Model处理。Model 应用程序的主体部分，所有的业务逻辑都应该写在该层。
+
+
+#今晚才弄出点文字笔记，我习惯性截图在word文档来看的，不习惯用markdown吧，今晚还要好好学习。
+
+
