--- a/第一周学习笔记（杨卓潘）.md
+++ b/第一周学习笔记（杨卓潘）.md
@@ -47,6 +47,6 @@
 View 是应用程序中负责生成用户界面的部分。也是在整个mvc架构中用户唯一可以看到的一层，接收用户的输入，显示处理结果。Controller 是根据用户的输入，控制用户界面数据显示及更新model对象状态的部分，控制器更重要的一种导航功能，想用用户出发的相关事件，交给Model处理。Model 应用程序的主体部分，所有的业务逻辑都应该写在该层。
 
 
-#今晚才弄出点文字笔记，我习惯性截图在word文档来看的，不习惯用markdown吧，今晚还要好好学习。
+#今晚才弄出点文字笔记，我习惯性截图在word文档来看的，不习惯用markdown吧，好好学习，争取过考核！
 
 
